# cloudshift

./: .coverage  .env.example  .gitignore  Cargo.toml  CloudShift PRD v1.0  Makefile  README.md  cloudbuild.yaml  package-lock.json  package.json  plan.md  pyproject.toml
demos/: run_demos.py
deploy/: kubernetes-demo.yaml
docker/: Dockerfile  cloudshift.Modelfile  docker-compose.yml
docs/: ENABLE-REFACTOR.md  approve-by-pattern.md  auth-demo-mode.md  auth-iap-troubleshooting.md  ci-cloudrun-setup.md  demo.md  deploy-emea-mas.md  e2e-pipeline-implementation-plan.md  e2e-ux-security-audit.md  gemini-api-key.md  load-balancer-iap-checklist.md  load-balancer-poc-searce.md  ollama-integration.md  pattern-catalogue.md  pipeline-flows.md  run-pipeline-e2e.md
patterns/: schema.yaml
rust/cloudshift-core/: Cargo.toml
rust/cloudshift-core/src/: bindings.rs  lib.rs
rust/cloudshift-core/src/detector/: aws.rs  azure.rs  mod.rs
rust/cloudshift-core/src/diff/: mod.rs
rust/cloudshift-core/src/manifest/: mod.rs
rust/cloudshift-core/src/parser/: ast_types.rs  cfn_parser.rs  hcl_parser.rs  mod.rs  python_parser.rs  typescript_parser.rs
rust/cloudshift-core/src/pattern_engine/: catalogue.rs  matcher.rs  mod.rs  scorer.rs  transformer.rs
rust/cloudshift-core/src/validation/: mod.rs
rust/cloudshift-core/src/walker/: mod.rs
scripts/: export-model.sh  run_pipeline_e2e.py  verify_patterns.py
tests/: conftest.py
ui/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+448 files in other folders)
