[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "cloudshift"
version = "0.1.0"
description = "Enterprise multi-cloud refactor accelerator"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=14",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "bcrypt>=4.0",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.maturin]
manifest-path = "rust/cloudshift-core/Cargo.toml"
python-source = "python"
module-name = "cloudshift.cloudshift_core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
