[package]
name = "cloudshift-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "cloudshift_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-hcl = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = { version = "2", features = ["text"] }
ignore = "0.4"
rayon = "1"
regex = "1"
thiserror = "2"
pythonize = "0.28"
